fix line-spacing and copy

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,6 +13,10 @@
 		@apply bg-body text-gray-100;
 	}
 
+	p {
+		@apply leading-6.25;
+	}
+
 	h1 {
 		@apply text-4xl text-amber-300 font-bold mt-8;
 	}
